'Code written by Lucas Mouette'

@startuml
skin rose

class Travel {
  +id: string
  +destination_country: string
  +start_date: string
  +end_date: string
  +cities: City[]
  +tour_guide: TourGuide
}

class City {
  +city_name: string
  +start_date: string
  +end_date: string
}

class TourGuide {
  +name: string
  +spoken_languages: string[]
}

Travel --> City : itinerary
Travel --> TourGuide : assigned
@enduml